[package]
name = "tilefactory_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
cxx = "=1.0.173"
geo = { version = "0.28.0", default-features = false }

[build-dependencies]
cxx-build = "=1.0.173"
